--- a/overlay/SettingsProviderOverlaySweet/res/values/defaults.xml
+++ b/overlay/SettingsProviderOverlaySweet/res/values/defaults.xml
@@ -21,4 +21,7 @@
     <string name="def_device_name_simple">Redmi Note 10 Pro</string>
 
     <bool name="def_screen_brightness_automatic_mode">true</bool>
+
+    <!-- Disable bluetooth by default -->
+    <bool name="def_bluetooth_on">false</bool>
 </resources>
