--- a/overlay/SettingsOverlay/res/values/config.xml
+++ b/overlay/SettingsOverlay/res/values/config.xml
@@ -32,4 +32,7 @@
 
     <!-- Smart Charging -->
     <bool name="config_supportSmartCharging">true</bool>
+
+    <!-- Whether to show refresh rate in display settings -->
+    <bool name="config_show_refresh_rate_switch">true</bool>
 </resources>
