sweet: Ancient-ify
Signed-off-by: BayerischeMotorenWerke <syaifulamri199@gmail.com>

--- a/overlay/SettingsOverlay/res/values/ancient_strings.xml
+++ b/overlay/SettingsOverlay/res/values/ancient_strings.xml
@@ -13,5 +13,11 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="maintainer_name">B M W</string>
+    <!-- AncientOS Device & Maintainer Info -->
+    <string name="maintainer_name">BayerischeMotorenWerke</string>
+    <string name="ancient_device_name_summary">Redmi Note 10 Pro</string>
+    <string name="ancient_chipset_type_summary">Snapdragon™ 732G</string>
+    <string name="ancient_gpu_summary">Adreno 618</string>
+    <string name="ancient_camera_mp_summary">108MP + 16MP Dual Camera</string>
+    <string name="ancient_screen_type_summary">AMOLED 6.67" Display</string>
 </resources>
